# HDiffPatch

builds/cmake/: CMakeLists.txt  README.md  hpatch.c  hpatch.h  main.cpp  toolchain.cmake
